--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+plugins {
+    id 'java'
+    id 'signing'
+    id 'maven-publish'
+}
+
 repositories {
     mavenLocal()
     maven {
@@ -11,13 +17,10 @@ group 'com.extollit.gaming'
 description = "An iterative A* path-finding engine designed for blocky sandbox games having entities with differing path requirements"
 version '1.8.1'
 
-apply plugin: 'java'
-apply plugin: 'signing'
-apply plugin: 'maven'
-
-compileJava {
-    sourceCompatibility = '1.8'
-    targetCompatibility = '1.8'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 sourceSets {
@@ -36,28 +39,54 @@ sourceSets {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: "org.mockito", name: "mockito-core", version: "1.10.19"
-    testCompile group: 'net.jqwik', name: 'jqwik', version: '1.3.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: "org.mockito", name: "mockito-core", version: "5.5.0"
+    testImplementation group: 'net.jqwik', name: 'jqwik', version: '1.6.5'
 
-    compile group: 'com.extollit', name: 'data-structures', version: '2.18'
+    implementation group: 'com.extollit', name: 'data-structures', version: '2.18'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 task shipDoc(type: Jar) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc') // Updated property
     from javadoc
 }
 task shipSrc(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier.set('sources') // Updated property
     from sourceSets.main.allSource
 }
 
-artifacts {
-    archives jar
-    archives shipSrc
-    archives shipDoc
+tasks.withType(Test).configureEach {
+    // Set Mockito to lenient globally for all test tasks
+    systemProperty 'mockito.strictness', 'lenient'
 }
 
-if (project.hasProperty("ossrhUsername") && project.hasProperty("ossrhPassword") &&
-    project.hasProperty("signing.keyId") && project.hasProperty("signing.password") && project.hasProperty("signing.secretKeyRingFile"))
-    apply from: 'publishing.gradle'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact shipDoc
+            artifact shipSrc
+        }
+    }
+
+    repositories {
+        maven {
+            url = uri("https://repo.maven.apache.org/maven2")
+            credentials {
+                username = project.findProperty("ossrhUsername") ?: ""
+                password = project.findProperty("ossrhPassword") ?: ""
+            }
+        }
+    }
+}
+
+if (project.hasProperty("signing.keyId") && project.hasProperty("signing.password") && project.hasProperty("signing.secretKeyRingFile")) {
+    signing {
+        useInMemoryPgpKeys(findProperty("signing.keyId"), findProperty("signing.secretKeyRingFile"))
+        sign publishing.publications
+    }
+}
